--- a/schedule.qmd
+++ b/schedule.qmd
@@ -158,7 +158,7 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           <li style="color:black">Configuring the GPIO interface on your Raspberry Pi</li>
           <li style="color:black">In-class Raspberry Pi Lab (Blinking LEDs)</li> 
           <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW1: Guest Lecture Summary [Download Template]</a></strong></li> <strong style="color:black">HW1 Assigned: 01/29/2025; HW1 Due: 02/05/2025</strong>
-          <li><strong><a href="Downloads/Midterm_Project_Proposal_MAE6291.docx" style="color:red;" target="_blank">Midterm Project Proposal [Download Template]</a></strong></li> <strong style="color:black">HW2 Assigned: 01/29/2025; HW2 Due: 02/12/2025</strong>
+          <li><strong><a href="Downloads/Midterm_Project_Proposal_MAE6291.docx" style="color:red;" target="_blank">Midterm Project Proposal [Download Template]</a></strong></li> <strong style="color:black">Midterm Proposal Assigned: 01/29/2025; Midterm Proposal Due: 02/12/2025</strong>
         </ul>
       </td>
       <!--- <td>Column content</td> -->
@@ -195,7 +195,7 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           <li style="color:black">Setting up a Python virtual environment [venv] and it's benefits</li>
           <li style="color:black">Installing Python GPIO packages with pip in [venv]</li>
           <li style="color:black"><strong>Blinking LEDs on boot [Graded Lab Activity]</strong></li>  
-          <li>In-class Raspberry Pi Lab (Ultrasound sensors)</li>
+          <!-- <li>In-class Raspberry Pi Lab (Ultrasound sensors)</li> -->
            <!-- <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW2.1: Guest Lecture Summary [Download Template]</a></strong></li> <strong>HW2.1 Assigned: 02/09/2024; HW2.1 Due: 02/16/2024</strong> -->
            <!-- <li><strong><a href="Downloads/Midterm_Project_Proposal_CS4907.docx" style="color:red;" target="_blank">HW2.2: Midterm Project Proposal [Download Template]</a></strong></li> <strong>HW2.2 Assigned: 02/09/2024; HW2.2 Due: 02/18/2024</strong> -->
         </ul>
@@ -216,21 +216,20 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           target="_blank">Chowdary  Yanamadala</a>, Technology Strategist <a href="https://arm.com" target="_blank">ARM</a> --></li>        
           <!-- <li>Guest lecture: <a href="Week4-Yanamadala-ARM-Lecture.qmd" target="_blank">**Anatomy of a real life IoT attack - Side Channel Attack (SCA) Analysis**</a> by <a href="/Lectures_Speakers/Chowdary-bio-Feb162024.pdf" target="_blank">Chowdary  Yanamadala</a>, Technology Strategist <a href="https://arm.com" target="_blank">ARM</a></li>      -->
           <li> Discussion of Midterm Projects and setting course for updates and reporting</li>
-          <!-- <li style="color:black"><a href="Week4.qmd" style="color:red;" target="_blank">Week-4 Notes</a></li> -->
+          <li style="color:black"><a href="Week4.qmd" style="color:red;" target="_blank">Week-4 Notes</a></li>
         </ul>
       </td>
       <td>
         <ul>
           <li>dweet.io - it's like the Twitter of Things <a href="https://dweet.io"target="_blank"> dweet</a></li>
           <li>Fetching data from dweet</li>
-          <li style="color:black"><strong>dweet an LED - Your first IoT program [Demo]</strong></li>
-          <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW2: Guest Lecture Summary [Download Template]</a></strong></li> <strong style="color:black">HW2 Assigned: 02/12/2025; HW1 Due: 02/19/2025</strong>
+          <li style="color:black"><strong>dweet an LED - Your first IoT program [Graded Lab Activity]</strong></li> 
+          <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW2: Guest Lecture Summary [Download Template]</a></strong></li> <strong style="color:black">HW2 Assigned: 02/12/2025; HW2 Due: 02/19/2025</strong>
           <li><strong>Due to snow-related university closure we will meet on Zoom and postpone all graded lab activities to next week<strong></li>
-         <!-- <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW3: Guest Lecture Summary [Download Template]</a></strong></li> <strong>HW3 Assigned: 02/16/2024; HW3 Due: 02/23/2024</strong> -->
         </ul>
       </td>
     </tr>
-    <tr class="table-secondary">
+<tr class="table-secondary">
       <th scope="row"> Week 4 [02/12/2025]</th>
       <td colspan="2" style="text-align: center">
           **Guest lecture:** *Protocol for point-to-point communication between two devices* by <a href="/Lectures_Speakers/JitishKolanjery-bio-Feb122025.pdf" target="_blank"> Jitish Kolanjery</a> 
@@ -240,8 +239,32 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
          **Slide deck and recording:** <a href="Week4-JitishKolanjery-Google-Lecture.qmd" style="color:red;" target="_blank">Week4-JitishKolanjery-Google-Lecture</a></li>
       </td>
     </tr>
+
 <tr class="table-secondary">
       <th scope="row">Week 5 [02/19/2025]</th>
+      <td>
+        <ul>
+          <li>Recap: Layers in IoT - 3 layer model</li>
+          <li>Automating an email feature - Minimalist application layer in your IoT product design</li> 
+          <li> Discussion of Midterm Projects and setting course for updates and reporting</li>
+          <li style="color:black"><a href="Week5.qmd" style="color:red;" target="_blank">Week-5 Notes</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>  
+          <li style="color:black"><strong>dweet an LED - Your first IoT program [Graded Lab Activity]</strong></li>
+          <li style="color:black"><strong>Raspberry Pi messaging with Python scripts [Graded Lab Activity]</strong></li> 
+          <li style="color:black"><strong>In-class Flask API development [Graded Lab Activity]</strong></li>      
+          <li style="color:black"><strong> HW3: Proximity sensing using Ultrasound sensor on boot</strong></li> 
+          <li style="color:black"><strong>HW3 Assigned: 02/19/2025; HW3 Due: 02/26/2025</strong></li> 
+          <li style="color:black"><strong> HW4: Flask API output</strong></li> 
+          <li style="color:black"><strong>HW4 Assigned: 02/21/2025; HW4 Due: 02/26/2025</strong></li> 
+        </ul>
+      </td>
+    </tr>
+
+<tr class="table-secondary">
+      <th scope="row">Week 6 [02/26/2025]</th>
       <td>
         <ul>
           <li>Understanding Analog and Digital Signals</li>
@@ -259,12 +282,12 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
       </td>
       <td>
         <ul>
-          <li>Proxmity sensing using Thonny IDE</li>
+          <!-- <li>Proxmity sensing using Thonny IDE</li>
           <li>Proxmity sensing using bash script</li>    
           <li style="color:black"><strong>Proxmity sensing on boot [Graded Lab Activity]</strong></li>   
           <li style="color:black"><strong>dweet an LED - Your first IoT program [Graded Lab Activity]</strong></li>
           <li style="color:black"><strong>Raspberry Pi messaging with Python scripts [Graded Lab Activity]</strong></li> 
-          <li style="color:black"><strong>In-class Flask API development [Graded Lab Activity]</strong></li>       
+          <li style="color:black"><strong>In-class Flask API development [Graded Lab Activity]</strong></li>        -->
          <!-- <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW4: Guest Lecture Summary [Download Template]</a></strong></li> <strong>HW4 Assigned: 02/23/2024; HW4 Due: 03/01/2024</strong> -->
         </ul>
       </td>
